force-app/main/default/objects/sugati__Brand__c/fields/sugati__At_A_Glance_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>sugati__At_A_Glance_Date_Format__c</fullName>
    <label>At A Glance - Date Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>