force-app/main/default/objects/sugati__Brand__c/fields/sugati__At_A_Glance_Table_Header_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__At_A_Glance_Table_Header_Color__c</fullName>
    <label>At A Glance Table Header Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>