force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_ADD_EXTRAS__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_ADD_EXTRAS__c</fullName>
    <label>OnBoarding ADD EXTRAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>