force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Alert_Success_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Alert_Success_Message__c</fullName>
    <label>OnBoarding Alert Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>