force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Bold_Values__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Bold_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBoarding Bold Values</label>
    <type>Checkbox</type>
</CustomField>