force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Book_your_trip__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Book_your_trip__c</fullName>
    <label>OnBoarding Book your trip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>