force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Button_CONFIRM_MY_BOOKING__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Button_CONFIRM_MY_BOOKING__c</fullName>
    <label>OnBoarding Button.CONFIRM MY BOOKING</label>
    <length>255</length>
    <type>Text</type>
</CustomField>