force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Check_Required_Fields_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Check_Required_Fields_for_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBoarding Check Required Fields for Pay</label>
    <type>Checkbox</type>
</CustomField>