force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Colour_Box_Outline__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Colour_Box_Outline__c</fullName>
    <label>OnBoarding Colour.Box Outline</label>
    <length>20</length>
    <type>Text</type>
</CustomField>