force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Colour_Cost_Summary_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Colour_Cost_Summary_Header_Text__c</fullName>
    <label>OnBoarding Colour.Cost Summary Header</label>
    <length>20</length>
    <type>Text</type>
</CustomField>