force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Colour_Main__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Colour_Main__c</fullName>
    <label>OnBoarding Colour.Main</label>
    <length>20</length>
    <type>Text</type>
</CustomField>