force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Copy_Address_Instruction__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Copy_Address_Instruction__c</fullName>
    <label>OnBoarding Copy Address Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>