force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Costings_Overview_Instruction__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Costings_Overview_Instruction__c</fullName>
    <label>OnBoarding Costings Overview Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>