force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Display_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Display_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBoarding Display WhatsApp</label>
    <type>Checkbox</type>
</CustomField>