force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Enable_Stripe_Payments__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Enable_Stripe_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBoarding Enable Stripe Payments</label>
    <type>Checkbox</type>
</CustomField>