force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Font_Family__c</fullName>
    <label>OnBoarding Font Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>