force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Header_Contact_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Header_Contact_Number_Text__c</fullName>
    <label>OnBoarding Header.Contact Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>