force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Header_Logo__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Header_Logo__c</fullName>
    <label>OnBoarding Header Logo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>