force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Heading_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Heading_Title__c</fullName>
    <label>OnBoarding Heading Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>