force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_MY_Trip_Summary__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_MY_Trip_Summary__c</fullName>
    <label>OnBoarding MY Trip Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>