force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Not_Available_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Not_Available_Message__c</fullName>
    <label>OnBoarding Not Available Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>