force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Preview_Opportunity_Reference__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Preview_Opportunity_Reference__c</fullName>
    <label>OnBoarding Preview Opportunity Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>