force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Redirect_URL_On_Confirm_Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Redirect_URL_On_Confirm_Button__c</fullName>
    <label>OnBoarding Redirect URL On Confirm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>