force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Show_Terms_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Show_Terms_And_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBoarding Show Terms And Condition</label>
    <type>Checkbox</type>
</CustomField>