force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Show_Tour_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Show_Tour_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OnBoarding Show Tour Details</label>
    <type>Checkbox</type>
</CustomField>