force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Stripe_Make_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Stripe_Make_Payment__c</fullName>
    <label>OnBoarding Make Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>