force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Stripe_Pay_Now__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Stripe_Pay_Now__c</fullName>
    <label>OnBoarding Pay Now</label>
    <length>255</length>
    <type>Text</type>
</CustomField>