force-app/main/default/objects/sugati__Brand__c/fields/sugati__B_OB_Twitter_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__B_OB_Twitter_URL__c</fullName>
    <label>OnBoarding Twitter URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>