force-app/main/default/objects/sugati__Brand__c/fields/sugati__Cover_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cover_Date_Format__c</fullName>
    <label>Cover Date Format</label>
    <length>50</length>
    <type>Text</type>
</CustomField>