force-app/main/default/objects/sugati__Brand__c/fields/sugati__Cover_Image_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Cover_Image_Border_Color__c</fullName>
    <label>Cover Image Border Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>