force-app/main/default/objects/sugati__Brand__c/fields/sugati__Custom_Credit_Charge_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Custom_Credit_Charge_Text__c</fullName>
    <label>Custom Credit Charge Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>