force-app/main/default/objects/sugati__Brand__c/fields/sugati__Date_Format__c.field-meta.xml
<CustomField>
    <fullName>sugati__Date_Format__c</fullName>
    <label>Date Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>