force-app/main/default/objects/sugati__Brand__c/fields/sugati__Day_By_Day_Date_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Day_By_Day_Date_Font_Color__c</fullName>
    <label>Day By Day Date Font Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>