force-app/main/default/objects/sugati__Brand__c/fields/sugati__Day_By_Day_Title_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Day_By_Day_Title_Font_Color__c</fullName>
    <label>Day By Day Title Font Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>