force-app/main/default/objects/sugati__Brand__c/fields/sugati__Default_to_Brand_Logo__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_to_Brand_Logo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default to Brand Logo</label>
    <type>Checkbox</type>
</CustomField>