force-app/main/default/objects/sugati__Brand__c/fields/sugati__Display_Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Invoice_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Invoice Details</label>
    <type>Checkbox</type>
</CustomField>