force-app/main/default/objects/sugati__Brand__c/fields/sugati__Display_Itinerary_Name_Section__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Itinerary_Name_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Itinerary Name Section</label>
    <type>Checkbox</type>
</CustomField>