force-app/main/default/objects/sugati__Brand__c/fields/sugati__Do_Not_Display_Agency_Logo__c.field-meta.xml
<CustomField>
    <fullName>sugati__Do_Not_Display_Agency_Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&apos;t Display Agency Logo</label>
    <type>Checkbox</type>
</CustomField>