force-app/main/default/objects/sugati__Brand__c/fields/sugati__Field_Value_Bold__c.field-meta.xml
<CustomField>
    <fullName>sugati__Field_Value_Bold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Value Bold?</label>
    <type>Checkbox</type>
</CustomField>