force-app/main/default/objects/sugati__Brand__c/fields/sugati__Flight_Detail_Section_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__Flight_Detail_Section_Record_Types__c</fullName>
    <label>Flight Detail Section Record Types</label>
    <type>TextArea</type>
</CustomField>