force-app/main/default/objects/sugati__Brand__c/fields/sugati__Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Font_Family__c</fullName>
    <label>Font Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>