force-app/main/default/objects/sugati__Brand__c/fields/sugati__Footer_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>sugati__Footer_Company_Website__c</fullName>
    <label>Footer Company Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>