force-app/main/default/objects/sugati__Brand__c/fields/sugati__Footer_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Footer_Image_URL__c</fullName>
    <label>Footer Image URL</label>
    <type>Url</type>
</CustomField>