force-app/main/default/objects/sugati__Brand__c/fields/sugati__Inclusion_Section_Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Inclusion_Section_Fieldset_Name__c</fullName>
    <label>Inclusion Section Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>