force-app/main/default/objects/sugati__Brand__c/fields/sugati__Itinerary_Logo_CSS__c.field-meta.xml
<CustomField>
    <fullName>sugati__Itinerary_Logo_CSS__c</fullName>
    <label>Logo CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>