force-app/main/default/objects/sugati__Brand__c/fields/sugati__Landscape_Layout__c.field-meta.xml
<CustomField>
    <fullName>sugati__Landscape_Layout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landscape Layout</label>
    <type>Checkbox</type>
</CustomField>