force-app/main/default/objects/sugati__Brand__c/fields/sugati__Page_CSS__c.field-meta.xml
<CustomField>
    <fullName>sugati__Page_CSS__c</fullName>
    <label>Page Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>