force-app/main/default/objects/sugati__Brand__c/fields/sugati__Pax_Detail_Section_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Pax_Detail_Section_Title__c</fullName>
    <label>Pax Detail Section Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>