force-app/main/default/objects/sugati__Brand__c/fields/sugati__PDF_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__PDF_Font_Color__c</fullName>
    <label>PDF Font Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>