force-app/main/default/objects/sugati__Brand__c/fields/sugati__S_B_ATOL_Flight_Plus_Arranger_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_B_ATOL_Flight_Plus_Arranger_Email__c</fullName>
    <label>ATOL Flight Plus Arranger Email</label>
    <type>Email</type>
</CustomField>