force-app/main/default/objects/sugati__Brand__c/fields/sugati__S_B_ATOL_Flight_Plus_Arranger_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_B_ATOL_Flight_Plus_Arranger_Phone__c</fullName>
    <label>ATOL Flight Plus Arranger Phone</label>
    <type>Phone</type>
</CustomField>