force-app/main/default/objects/sugati__Brand__c/fields/sugati__S_B_ATOL_Holder_Protector__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_B_ATOL_Holder_Protector__c</fullName>
    <label>ATOL Holder Protector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>