force-app/main/default/objects/sugati__Brand__c/fields/sugati__Title_Header__c.field-meta.xml
<CustomField>
    <fullName>sugati__Title_Header__c</fullName>
    <label>Title(Header)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>