force-app/main/default/objects/sugati__Brand__c/fields/sugati__Title_Header_Background__c.field-meta.xml
<CustomField>
    <fullName>sugati__Title_Header_Background__c</fullName>
    <label>Title Header Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>