force-app/main/default/objects/sugati__Brand__c/fields/sugati__Use_Full_Flight_Names__c.field-meta.xml
<CustomField>
    <fullName>sugati__Use_Full_Flight_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Full Flight Names</label>
    <type>Checkbox</type>
</CustomField>