force-app/main/default/objects/sugati__Brand__c/fields/sugati__Vamoos_Branding_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__Vamoos_Branding_Code__c</fullName>
    <inlineHelpText>A integer value which is used to identify the Vamoos branding while pushing an itinerary in the Vamoos travel app.</inlineHelpText>
    <label>Vamoos Branding Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>000000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>