force-app/main/default/objects/sugati__Brand__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__Default_to_Brand_Logo__c</columns>
    <columns>sugati__Do_Not_Display_Agency_Logo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>