force-app/main/default/objects/sugati__Brand__c/listViews/sugati__All1.listView-meta.xml
<ListView>
    <fullName>sugati__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>